# commands

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
commands/: __init__.py  add.py  command_base.py  exit.py  if_.py  loop.py  print.py  set.py  subtract.py  use.py
tests/: mocks.py  test_add_command.py  test_command.py  test_command_stream.py  test_exit.py  test_if_command.py  test_loop_command.py  test_print_command.py  test_set_command.py  test_subtract_command.py  test_use_command.py
